Kubernetes-Ingress/admin-portal-aws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
    spec:
      containers:
        - name: admin-portal
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-mm:aline-admin-portal-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: admin-portal
spec:
  selector:
    app: admin-portal
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: ClusterIP
