Kubernetes-Ingress/gateway-aws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-gateway
  template:
    metadata:
      labels:
        app: aline-gateway
    spec:
      containers:
        - name: aline-gateway
          imagePullPolicy: IfNotPresent
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-mm:aline_gateway-v10
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: aline-gateway
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-0cb5bd1a1a510e83a,subnet-0b667e005ca39150a,subnet-02988da1e3b85dd89
spec:
  selector:
    app: aline-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
