Kubernetes-Ingress/landing-portal-aws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-portal
  template:
    metadata:
      labels:
        app: landing-portal
    spec:
      containers:
        - name: landing-portal
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-mm:landing-portal-rosa
          imagePullPolicy: Always
          ports:
            - containerPort: 3007

---
apiVersion: v1
kind: Service
metadata:
  name: landing-portal
spec:
  selector:
    app: landing-portal
  ports:
    - protocol: TCP
      port: 3007
      targetPort: 80
  type: LoadBalancer
