Kubernetes-Ingress/member-dashboard-aws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-dashboard
  template:
    metadata:
      labels:
        app: member-dashboard
    spec:
      containers:
        - name: member-dashboard
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-mm:aline-member-dashboard-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4200

---
apiVersion: v1
kind: Service
metadata:
  name: member-dashboard
spec:
  selector:
    app: member-dashboard
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
  type: ClusterIP
